--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,6 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - uses: actions/checkout@v1
-      - run: bundle install
+      - run: brew install fastlane
       - run: pod install
-      - run: ./apollo.sh
-      - run: bundle exec fastlane test
+      - run: fastlane testLane
