--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: macOS-latest
 
     steps:
-      - uses: webfactory/ssh-agent@v0.1.1
+      - uses: actions/labeler@v2
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v1
       - run: brew install fastlane
       - run: pod install
